final changes with added config file to enable delete and put request on server .wevdavmodule issue

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "defaultconnection": "Server=YOGESH; User id=sa; Password=sa123; Database=HelloAPI; Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
   }
+
 }
