--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "defaultconnection": "Server=.; User id=sa; Password=sa123; Database=HelloAPI; Trusted_Connection=True; TrustServerCertificate=True"
+    "defaultconnection": "Server=YOGESH; User id=sa; Password=sa123; Database=HelloAPI; Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
   }
 
 }
